テストを追加

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,6 @@
 CMS_API_URL=https://powercmsx.localhost/app/api
 CMS_USER_NAME=test
 CMS_PASSWORD=p@ssw0rd!
+CMS_WORKSPACE_ID=1
+TEST_ENTRY_ID=1
+TEST_DRAFT_ENTRY_ID=2
