--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,4 +41,4 @@ jobs:
         run: vendor/bin/phpstan analyse --configuration phpstan.neon
 
       - name: Run PHPUnit
-        run: vendor/bin/phpunit tests/*.php
+        run: vendor/bin/phpunit --display-warnings tests/*.php
